vpc(Dup)/vpc.tf
provider "aws" {
  region     = "ap-south-1"
  access_key = "AKIA54DE3HFQYDSZVHFC"
  secret_key = "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"
}

resource "aws_vpc" "naveen" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "naveen"
  }
}

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.naveen.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "public"
  }
}

resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.naveen.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "private"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.naveen.id

  tags = {
    Name = "igw"
  }
}

resource "aws_eip" "ip" {
  vpc      = true
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.ip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "NAT"
  }

resource "aws_route_table" "rt1" {
  vpc_id = aws_vpc.naveen.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

resource "aws_route_table" "rt2" {
  vpc_id = aws_vpc.naveen.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat.id
  }

resource "aws_security_group" "sg" {
  name        = "sg_1"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.naveen.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.naveen.cidr_block]
    ipv6_cidr_blocks = [aws_vpc.naveen.ipv6_cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }

resource "aws_route_table_association" "as1" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.rt1.id
}

resource "aws_route_table_association" "as2" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.rt2.id
}
